# pasaka_api

./: .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md
migrations/: 20250418231904_create_users.sql  20250419025547_fix_timestamp_type.sql  20250419184233_id_refactor.sql
src/: main.rs
src/models/: bible.rs  mod.rs  user.rs
src/routes/: auth.rs  bible.rs  mod.rs
src/utils/: auth.rs  hasher.rs  mod.rs
